crates/database_crud_derive/tests/fixtures/fail_enum.rs
use database_crud_derive::Crud;

#[derive(Crud)]
enum Status {
    Active,
    Inactive,
}

fn main() {}
